[gd_scene load_steps=4 format=3 uid="uid://deix6gohaapif"]

[ext_resource type="PackedScene" uid="uid://c6wednpvk2t26" path="res://scenes/world/enemies/base_enemy.tscn" id="1_vopqk"]
[ext_resource type="Script" uid="uid://d1ghqp2o5egeo" path="res://scripts/ennemy_demo_boss.gd" id="2_15374"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_6o34r"]
resource_local_to_scene = true

[node name="DemoBoss" instance=ExtResource("1_vopqk")]
script = ExtResource("2_15374")
health = 2000
movement_speed = 0.4
damage_amount = 150
attack_speed = 0.2
experience_points = 1000

[node name="figurine-cube" parent="." index="0"]
transform = Transform3D(-5, 0, -7.54979e-07, 0, 5, 0, 7.54979e-07, 0, -5, 0, 0, 0)

[node name="leg-left" parent="figurine-cube/figurine-cube/root" index="0"]
material_override = SubResource("StandardMaterial3D_6o34r")

[node name="leg-right" parent="figurine-cube/figurine-cube/root" index="1"]
material_override = SubResource("StandardMaterial3D_6o34r")

[node name="torso" parent="figurine-cube/figurine-cube/root" index="2"]
material_override = SubResource("StandardMaterial3D_6o34r")

[node name="arm-left" parent="figurine-cube/figurine-cube/root/torso" index="0"]
material_override = SubResource("StandardMaterial3D_6o34r")

[node name="arm-right" parent="figurine-cube/figurine-cube/root/torso" index="1"]
material_override = SubResource("StandardMaterial3D_6o34r")

[node name="head" parent="figurine-cube/figurine-cube/root/torso" index="2"]
material_override = SubResource("StandardMaterial3D_6o34r")

[node name="DamageArea" parent="." index="3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.000998616, 0.521029, 0.016819)

[node name="TimerMinion" type="Timer" parent="." index="6"]
wait_time = 2.5
autostart = true

[node name="Label3D" type="Label3D" parent="." index="7"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4, -0.5665)
billboard = 1
text = "2000/2000"
font_size = 42
outline_size = 24

[node name="TimerDefense" type="Timer" parent="." index="8"]
one_shot = true

[connection signal="hit" from="DamageableObject" to="." method="_on_damageable_object_hit"]
[connection signal="timeout" from="TimerMinion" to="." method="_on_timer_minion_timeout"]
[connection signal="timeout" from="TimerDefense" to="." method="_on_timer_defense_timeout"]

[editable path="figurine-cube"]
